server/src/antlr/SELinuxParser.ts
// Generated from SELinux.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import SELinuxListener from "./SELinuxListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class SELinuxParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly WHITESPACE = 24;
	public static readonly NEWLINE = 25;
	public static readonly NUMBER = 26;
	public static readonly COMMENT = 27;
	public static readonly RIGHTPARENTHESIS = 28;
	public static readonly LEFTPARENTHESIS = 29;
	public static readonly RIGHTBRACKET = 30;
	public static readonly LEFTBRACKET = 31;
	public static readonly TEXT = 32;
	public static readonly FORWARDSLASH = 33;
	public static readonly SEMICOLON = 34;
	public static readonly BOOL = 35;
	public static readonly WORD = 36;
	public static readonly COMMA = 37;
	public static readonly BACKTICK = 38;
	public static readonly SINGLEQUOTE = 39;
	public static readonly AND = 40;
	public static readonly OR = 41;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_file = 0;
	public static readonly RULE_line = 1;
	public static readonly RULE_roleStatements = 2;
	public static readonly RULE_role = 3;
	public static readonly RULE_attribute_role = 4;
	public static readonly RULE_roleattribute = 5;
	public static readonly RULE_allow = 6;
	public static readonly RULE_role_transition = 7;
	public static readonly RULE_dominance = 8;
	public static readonly RULE_from_role_id = 9;
	public static readonly RULE_role_id = 10;
	public static readonly RULE_type_id = 11;
	public static readonly RULE_type_id_list = 12;
	public static readonly RULE_attribute_id = 13;
	public static readonly RULE_to_role_id = 14;
	public static readonly RULE_to_role_id_list = 15;
	public static readonly RULE_current_role_id = 16;
	public static readonly RULE_current_role_id_list = 17;
	public static readonly RULE_new_role_id = 18;
	public static readonly RULE_dom_role_id = 19;
	public static readonly RULE_referencePolicySupportMacros = 20;
	public static readonly RULE_policy_end = 21;
	public static readonly RULE_policy_module = 22;
	public static readonly RULE_gen_require = 23;
	public static readonly RULE_optional_policy = 24;
	public static readonly RULE_gen_tunable = 25;
	public static readonly RULE_turnable_policy = 26;
	public static readonly RULE_interface = 27;
	public static readonly RULE_template = 28;
	public static readonly RULE_gen_tunable_id = 29;
	public static readonly RULE_turnable_policy_rules = 30;
	public static readonly RULE_require_statements = 31;
	public static readonly RULE_optional_statements = 32;
	public static readonly RULE_module_name = 33;
	public static readonly RULE_version = 34;
	public static readonly RULE_boolean_name = 35;
	public static readonly RULE_boolean_value = 36;
	public static readonly RULE_name = 37;
	public static readonly RULE_interface_rules = 38;
	public static readonly RULE_template_rules = 39;
	public static readonly RULE_typeStatements = 40;
	public static readonly RULE_attribute = 41;
	public static readonly RULE_typeattribute = 42;
	public static readonly RULE_type = 43;
	public static readonly RULE_typealias = 44;
	public static readonly RULE_permissive = 45;
	public static readonly RULE_attribute_id_list = 46;
	public static readonly RULE_alias_id_list = 47;
	public static readonly RULE_alias_id = 48;
	public static readonly RULE_bool = 49;
	public static readonly RULE_boolStatement = 50;
	public static readonly RULE_function_call = 51;
	public static readonly RULE_function_name = 52;
	public static readonly RULE_parameter_list = 53;
	public static readonly literalNames: (string | null)[] = [ null, "'role'", 
                                                            "'types'", "'attribute_role'", 
                                                            "'roleattribute'", 
                                                            "'allow'", "'role_transition'", 
                                                            "':'", "'class'", 
                                                            "'dominance'", 
                                                            "'policy_module'", 
                                                            "'gen_require'", 
                                                            "'optional_policy'", 
                                                            "'gen_tunable'", 
                                                            "'tunable_policy'", 
                                                            "'interface'", 
                                                            "'template'", 
                                                            "'attribute'", 
                                                            "'typeattribute'", 
                                                            "'type'", "'alias'", 
                                                            "'typealias'", 
                                                            "'permissive'", 
                                                            "'bool'", null, 
                                                            null, null, 
                                                            null, "')'", 
                                                            "'('", "'}'", 
                                                            "'{'", null, 
                                                            "'/'", "';'", 
                                                            null, null, 
                                                            "','", "'`'", 
                                                            "'''", "'&&'", 
                                                            "'||'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "WHITESPACE", 
                                                             "NEWLINE", 
                                                             "NUMBER", "COMMENT", 
                                                             "RIGHTPARENTHESIS", 
                                                             "LEFTPARENTHESIS", 
                                                             "RIGHTBRACKET", 
                                                             "LEFTBRACKET", 
                                                             "TEXT", "FORWARDSLASH", 
                                                             "SEMICOLON", 
                                                             "BOOL", "WORD", 
                                                             "COMMA", "BACKTICK", 
                                                             "SINGLEQUOTE", 
                                                             "AND", "OR" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "line", "roleStatements", "role", "attribute_role", "roleattribute", 
		"allow", "role_transition", "dominance", "from_role_id", "role_id", "type_id", 
		"type_id_list", "attribute_id", "to_role_id", "to_role_id_list", "current_role_id", 
		"current_role_id_list", "new_role_id", "dom_role_id", "referencePolicySupportMacros", 
		"policy_end", "policy_module", "gen_require", "optional_policy", "gen_tunable", 
		"turnable_policy", "interface", "template", "gen_tunable_id", "turnable_policy_rules", 
		"require_statements", "optional_statements", "module_name", "version", 
		"boolean_name", "boolean_value", "name", "interface_rules", "template_rules", 
		"typeStatements", "attribute", "typeattribute", "type", "typealias", "permissive", 
		"attribute_id_list", "alias_id_list", "alias_id", "bool", "boolStatement", 
		"function_call", "function_name", "parameter_list",
	];
	public get grammarFileName(): string { return "SELinux.g4"; }
	public get literalNames(): (string | null)[] { return SELinuxParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return SELinuxParser.symbolicNames; }
	public get ruleNames(): string[] { return SELinuxParser.ruleNames; }
	public get serializedATN(): number[] { return SELinuxParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, SELinuxParser._ATN, SELinuxParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let localctx: FileContext = new FileContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, SELinuxParser.RULE_file);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
			case 3:
			case 4:
			case 5:
			case 6:
			case 9:
			case 10:
			case 11:
			case 12:
			case 13:
			case 14:
			case 15:
			case 16:
			case 17:
			case 18:
			case 19:
			case 21:
			case 22:
			case 23:
			case 36:
				{
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 108;
					this.line();
					}
					}
					this.state = 111;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 15728250) !== 0) || _la===36);
				}
				break;
			case -1:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 116;
			this.match(SELinuxParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let localctx: LineContext = new LineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, SELinuxParser.RULE_line);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 17:
			case 18:
			case 19:
			case 21:
			case 22:
				{
				this.state = 118;
				this.typeStatements();
				}
				break;
			case 10:
			case 11:
			case 12:
			case 13:
			case 14:
			case 15:
			case 16:
				{
				this.state = 119;
				this.referencePolicySupportMacros();
				}
				break;
			case 1:
			case 3:
			case 4:
			case 5:
			case 6:
			case 9:
				{
				this.state = 120;
				this.roleStatements();
				}
				break;
			case 23:
				{
				this.state = 121;
				this.bool();
				}
				break;
			case 36:
				{
				this.state = 122;
				this.function_call();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public roleStatements(): RoleStatementsContext {
		let localctx: RoleStatementsContext = new RoleStatementsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, SELinuxParser.RULE_roleStatements);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				{
				this.state = 125;
				this.role();
				}
				break;
			case 3:
				{
				this.state = 126;
				this.attribute_role();
				}
				break;
			case 4:
				{
				this.state = 127;
				this.roleattribute();
				}
				break;
			case 5:
				{
				this.state = 128;
				this.allow();
				}
				break;
			case 6:
				{
				this.state = 129;
				this.role_transition();
				}
				break;
			case 9:
				{
				this.state = 130;
				this.dominance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 133;
			this.match(SELinuxParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public role(): RoleContext {
		let localctx: RoleContext = new RoleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, SELinuxParser.RULE_role);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 135;
			this.match(SELinuxParser.T__0);
			this.state = 136;
			this.role_id();
			this.state = 140;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
				{
				this.state = 137;
				this.match(SELinuxParser.T__1);
				{
				this.state = 138;
				this.type_id_list();
				}
				}
				break;
			case 34:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attribute_role(): Attribute_roleContext {
		let localctx: Attribute_roleContext = new Attribute_roleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, SELinuxParser.RULE_attribute_role);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 142;
			this.match(SELinuxParser.T__2);
			this.state = 143;
			this.attribute_id();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public roleattribute(): RoleattributeContext {
		let localctx: RoleattributeContext = new RoleattributeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, SELinuxParser.RULE_roleattribute);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 145;
			this.match(SELinuxParser.T__3);
			this.state = 146;
			this.role_id();
			this.state = 147;
			this.attribute_id_list();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public allow(): AllowContext {
		let localctx: AllowContext = new AllowContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, SELinuxParser.RULE_allow);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this.match(SELinuxParser.T__4);
			this.state = 150;
			this.from_role_id();
			this.state = 151;
			this.to_role_id_list();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public role_transition(): Role_transitionContext {
		let localctx: Role_transitionContext = new Role_transitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, SELinuxParser.RULE_role_transition);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 153;
			this.match(SELinuxParser.T__5);
			this.state = 154;
			this.current_role_id_list();
			this.state = 155;
			this.type_id_list();
			this.state = 159;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 7:
				{
				this.state = 156;
				this.match(SELinuxParser.T__6);
				this.state = 157;
				this.match(SELinuxParser.T__7);
				}
				break;
			case 36:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 161;
			this.new_role_id();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dominance(): DominanceContext {
		let localctx: DominanceContext = new DominanceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, SELinuxParser.RULE_dominance);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 163;
			this.match(SELinuxParser.T__8);
			this.state = 164;
			this.match(SELinuxParser.T__0);
			this.state = 165;
			this.dom_role_id();
			this.state = 166;
			this.match(SELinuxParser.T__0);
			this.state = 167;
			this.role_id();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public from_role_id(): From_role_idContext {
		let localctx: From_role_idContext = new From_role_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, SELinuxParser.RULE_from_role_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 169;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public role_id(): Role_idContext {
		let localctx: Role_idContext = new Role_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, SELinuxParser.RULE_role_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 171;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_id(): Type_idContext {
		let localctx: Type_idContext = new Type_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, SELinuxParser.RULE_type_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 173;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_id_list(): Type_id_listContext {
		let localctx: Type_id_listContext = new Type_id_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, SELinuxParser.RULE_type_id_list);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 176;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 175;
					this.type_id();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 178;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attribute_id(): Attribute_idContext {
		let localctx: Attribute_idContext = new Attribute_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, SELinuxParser.RULE_attribute_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 180;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public to_role_id(): To_role_idContext {
		let localctx: To_role_idContext = new To_role_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, SELinuxParser.RULE_to_role_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 182;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public to_role_id_list(): To_role_id_listContext {
		let localctx: To_role_id_listContext = new To_role_id_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, SELinuxParser.RULE_to_role_id_list);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 184;
				this.to_role_id();
				}
				}
				this.state = 187;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===36);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public current_role_id(): Current_role_idContext {
		let localctx: Current_role_idContext = new Current_role_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, SELinuxParser.RULE_current_role_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 189;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public current_role_id_list(): Current_role_id_listContext {
		let localctx: Current_role_id_listContext = new Current_role_id_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, SELinuxParser.RULE_current_role_id_list);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 192;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 191;
					this.current_role_id();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 194;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public new_role_id(): New_role_idContext {
		let localctx: New_role_idContext = new New_role_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, SELinuxParser.RULE_new_role_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 196;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dom_role_id(): Dom_role_idContext {
		let localctx: Dom_role_idContext = new Dom_role_idContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, SELinuxParser.RULE_dom_role_id);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 198;
			this.match(SELinuxParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public referencePolicySupportMacros(): ReferencePolicySupportMacrosContext {
		let localctx: ReferencePolicySupportMacrosContext = new ReferencePolicySupportMacrosContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, SELinuxParser.RULE_referencePolicySupportMacros);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 213;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 10:
				{
				this.state = 200;
				this.policy_module();
				this.state = 201;
				this.match(SELinuxParser.RIGHTPARENTHESIS);
				}
				break;
			case 11:
			case 12:
			case 13:
			case 14:
			case 15:
			case 16:
				{
				this.state = 209;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 11:
					{
					this.state = 203;
					this.gen_require();
					}
					break;
				case 12:
					{
					this.state = 204;
					this.optional_policy();
					}
					break;
				case 13:
					{
					this.state = 205;
					this.gen_tunable();
					}
					break;
				case 14:
					{
					this.state = 206;
					this.turnable_policy();
					}
					break;
				case 15:
					{
					this.state = 207;
					this.interface_();
					}
					break;
				case 16:
					{
					this.state = 208;
					this.template();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 211;
				this.policy_end();
				}
				break;
			default:
